0.52:
 * Fixed filenames not being affected by --font-scale (Carl Colena).
 * Fixed file key not being affected by --font-scale.
 * Added --file-idle-time-at-end option.
 * Added --fixed-user-size option.

0.51:
 * Fixed --font-file relative path handling.
 * Fixed a bug in resolving the repository root directory from a relative path.

0.50:
 * Right mouse button rotation now pivots around the camera.
 * Added --font-file option.
 * Added --enable-font-file option to configure.
 * Added --no-time-travel option (Lars Schmertmann).
 * Added --dir-name-position option (Lars Schmertmann).
 * Added --file-extension-fallback option (Lars Schmertmann).
 * Added --user-show-filter option (Victor Lopez).
 * Added --disable-input option (Joey Parrish).
 * Added --loop-delay-seconds option (Joey Parrish).
 * Added --font-scale option.
 * Added filename, dirname and user font size options (Carl Colena).
 * Added workaround for FFMpeg error parsing Gource PPM video output.
 * Fixed a bug in the Mercurial log parser that caused changes to be missed.
 * Fixed file removal being cancelled by an action with an earlier timestamp.
 * Fixed a bug in the log file format detection that could result in the wrong
   first entry being displayed for a custom log.
 * Fixed a bug where automatically cycling through a config with multiple
   repositories reset settings to their defaults.

0.49:
 * Fixed compatibility with GLM 0.9.9.0.

0.48:
 * Can now generate logs from git sub module directories.

0.47:
 * Fixed low mouse movement speed with some mice while repositioning camera.

0.46:
 * Added --screen option.

0.45:
 * Added --window-position XxY option.
 * Added --frameless option.
 * Added --file-show-filter REGEX option (swoogles).
 * Added --filename-time and filename-colour options (gh2k).
 * Improved handling of very low seconds-per-day values (malengrin).
 * Fixed crash when SVN log lacks author information (obarthel).
 * Additional git log command validation (cym13).