@@ -4,7 +4,7 @@ bin_PROGRAMS = gource
 
 gource_CXXFLAGS = -std=gnu++0x -Wall -Wno-sign-compare -Wno-reorder -Wno-unused-but-set-variable -Wno-unused-variable
 
-gource_SOURCES = \
+sources = \
 	src/action.cpp \
 	src/bloom.cpp \
 	src/caption.cpp \
@@ -47,13 +47,22 @@ gource_SOURCES = \
 	src/gource_settings.cpp \
 	src/key.cpp \
 	src/logmill.cpp \
-	src/main.cpp \
 	src/pawn.cpp \
 	src/slider.cpp \
 	src/spline.cpp \
 	src/textbox.cpp \
 	src/user.cpp \
 	src/zoomcamera.cpp
+
+if USE_BUNDLED_TINYXML
+sources += \
+	src/tinyxml/tinyxmlerror.cpp \
+	src/tinyxml/tinystr.cpp \
+	src/tinyxml/tinyxml.cpp \
+	src/tinyxml/tinyxmlparser.cpp
+endif
+
+gource_SOURCES = src/main.cpp ${sources}
 
 AM_CPPFLAGS = -DSDLAPP_RESOURCE_DIR=\"$(pkgdatadir)\"
 
@@ -69,15 +78,6 @@ install-data-hook:
 uninstall-hook:
 	rm -f $(DESTDIR)$(mandir)/man1/gource.1.gz
 
-
-if USE_BUNDLED_TINYXML
-gource_SOURCES += \
-	src/tinyxml/tinyxmlerror.cpp \
-	src/tinyxml/tinystr.cpp \
-	src/tinyxml/tinyxml.cpp \
-	src/tinyxml/tinyxmlparser.cpp
-endif
-
 if FONTFILE
 AM_CPPFLAGS += -DGOURCE_FONT_FILE=\"$(gourcefontfile)\"
 else
@@ -88,3 +88,12 @@ fontsdir = $(pkgdatadir)/fonts
 dist_fonts_DATA = data/fonts/README data/fonts/FreeSans.ttf
 endif
 endif
+
+check_PROGRAMS = gource_tests
+gource_tests_CPPFLAGS = -I src/test/ ${BOOST_CPPFLAGS}
+gource_tests_LDFLAGS = ${BOOST_LDFLAGS}
+gource_tests_LDADD = ${BOOST_UNIT_TEST_FRAMEWORK_LIB}
+
+gource_tests_SOURCES = src/test/main.cpp src/test/datetime_tests.cpp ${sources}
+
+TESTS = gource_tests
