@@ -355,7 +355,7 @@ gource my\-cvs\-project.log
 If you want to use Gource with something other than the supported systems, there is a pipe ('|') delimited custom log format:
 
 .ti 10
-timestamp - A unix timestamp of when the update occurred.
+timestamp - An ISO 8601 or unix timestamp of when the update occurred.
 .ti 10
 username  - The name of the user who made the update.
 .ti 10
